--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <a class="site-title fixed bg-blue p1 no-line-height top-0 left-0 z4" href="{{ site.baseurl }}/">
     {% include chowdown-logo-white.svg %}
 </a>
-<h1>{{ site.title }}</h1>
+<h1 style="text-align:center">{{ site.title }}</h1>
