--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
-<a class="site-title fixed bg-blue p1 no-line-height top-0 left-0 z4" href="{{ site.baseurl }}/">
+<a href="{{ site.baseurl }}/">
     <h1 style="text-align:center">{{ site.title }}</h1>
 </a>
