--- a/css/bass.css
+++ b/css/bass.css
@@ -763,6 +763,10 @@ h6, .h6 { font-size: .75rem }
     box-sizing: border-box;
   }
 
+  .lg-col-n {
+    width: 18%;
+  }
+
   .lg-col-1 {
     width: 8.33333%;
   }
@@ -1110,7 +1114,7 @@ input[type=range] {
   box-shadow: none;
 }
 
-.button-transparent:hover:before, 
+.button-transparent:hover:before,
 .button-transparent:focus:before {
   opacity: .09375;
 }
@@ -1118,7 +1122,7 @@ input[type=range] {
 .button-transparent:focus {
   outline: none;
   border-color: transparent;
-  box-shadow: 0 0 0 2px; 
+  box-shadow: 0 0 0 2px;
 }
 
 .button-transparent:active,
